--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</div>
     <!-- <img src="images/main.jpg" class="mainimage11"> -->
  
- <div class="centerfont">
+ <div class="bg-front centerfont">
   <h1>DRIVING PERFORMANCE</h1>
   <p class="padding_f">Welcome to AMG: Driving Performance website. My name is James Lee and I am passionate about performance cars manufactured by Mercedes Benz of Germany. <br> Driving Performance aims to provide information about AMG performance car models, the history of the company, the photo gallery of car models, and the vision of AMG as a brand. </p>
   <div class="fontcolor_w">
